--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<style>Gremb
+<style>
 body {
     background-color: white
 </style>
@@ -14,4 +14,3 @@ function handleButtonClick(button) {
     button.textContent = '^_^';
 }
 </script>
-<a href="【Gremb的个人空间-哔哩哔哩】 https://b23.tv/waxKkdk">My bilibili</a>
