--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@ body {
 function handleButtonClick(button) {
     button.style.backgroundColor = 'green';
     button.textContent = '^_^';
-}
+
 </script>
+
+<img src="a.jpg" alt="picture">
